--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Block Editor</title>
+  <title>Massive Headache</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <div id="loading-indicator">Loading Assets...</div>
 
-  
+  <div id="draw-mode-cursor"></div>
+
   <div id="index-display"> 
     <div id="index-header">
       <span id="index-title">Index:</span>
@@ -42,6 +43,6 @@
   </script>
 
   
-  <script type="module" src="js/app.js"></script>
+  <script type="module" src="/js/app/main.js"></script>
 </body>
 </html>
